--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "/src",
     "/dist"
   ],
+  "types": "dist/type.d.ts",
   "repository": "git@github.com:eKoopmans/html2pdf.js.git",
   "keywords": [
     "javascript",
